# DesktopSearcher

./: .gitignore  README.md  demo_widget.py  launch_widget.sh  pyproject.toml  run_brain.sh  test_sample.md
docs/: IMPLEMENTATION.md  USAGE.md  WIDGET.md
notebooks/: custom_analysis.ipynb  file_graph.html  starter.ipynb
src/: app.py  brain_analytics.py  brain_native.py  brain_ocr.py  brain_search.py  brain_widget.py  query_brain.py
tests/: test_imports.py  test_ocr_downloads.py  test_optimization.py  test_webkit_app.py  test_webkit_sanity.py
